# kegg-rag

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/kegg/: index.py
src/utils/: env.py  fetch.py
tests/: fixtures.py  test_fetch.py  test_pages.py
