[project]
requires-python = ">=3.12"
dependencies = ["niquests~=3.7.2", "pydantic-settings~=2.4.0"]

[tool.pdm]
distribution = false

[tool.pdm.scripts]
post_install = "pre-commit install"
fmt = { composite = ["ruff check --fix --exit-zero", "ruff format"] }
test = { cmd = ["watchfiles", "pytest --lf", "src", "tests"] }

[tool.pdm.dev-dependencies]
dev = ["ruff~=0.5.4", "pre-commit~=3.7.1"]
test = ["pytest~=8.3.2", "pytest-asyncio~=0.23.8", "watchfiles~=0.22.0"]

[tool.pytest.ini_options]
pythonpath = "src"
asyncio_mode = "auto"

[tool.ruff]
line-length = 200

[tool.ruff.lint]
extend-select = [
    "I",    # isort
    "N",    # pep8-naming
    "W",    # pycodestyle
    "UP",   # pyupgrade
    "TRY",  # tryceratops
    "RUF",  # ruff
    "FURB", # refurb
    "C4",   # flake8-comprehensions
    "ARG",  # flake8-unused-arguments
    "PIE",  # flake8-pie
    "PTH",  # flake8-use-pathlib
    "RSE",  # flake8-raise
    "SIM",  # flake8-simplify
    "SLF",  # flake8-self
]
ignore = [
    "RUF200", # Failed to parse pyproject.toml: missing field `name`
]
